# paper-fetch-skill

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_OPTIMIZATION.md  CHANGELOG.md  CHANGELOG_CN.md  MIGRATION_DECISIONS.md  README.md  REDUNDANCY_ANALYSIS.md  REDUNDANCY_GOAL.md  REFACTOR_PROGRESS.md  codebase-refactoring-analysis.md  install-offline.ps1  install-offline.sh  publisher-provider-todo.md  pyproject.toml
.github/workflows/: ci.yml
docs/: HERMES_GUIDE_CN.md  README.md  adding-a-provider.md  cli.md  deployment.md  extraction-rules.md  flaresolverr.md  legacy-browser-runtime.md  provider-development.md  providers.md
docs/ai-onboarding/: README.md  acceptance.md  agent-task-brief.md  failure-recovery.md  hard-constraints.md  known-providers.yml  operator-prompts.md  provider-manifest.md  provider-manifest.schema.json
docs/architecture/: overview.md  target-architecture.md
installer/: manifest.json  paper-fetch-skill.iss
onboarding/: README.md  acceptance.md  agent-task-brief.md  automation-roadmap.md  instruction.md  known-providers.yml  manifest-discovery.md  provider-manifest.schema.json  runbook.md
onboarding/manifests/: royalsocietypublishing.yml
references/: api_notes.md  routing_rules.md
scripts/: build-offline-package-windows.ps1  build-offline-package.sh  capture_fixture.py  install-codex-skill.sh  onboard_from_manifests.py  propose_cleaning_chain.py  run-codex-paper-fetch-mcp.sh  scaffold_provider.py  validate_extraction_rules.py  verify-offline-package.sh  windows-installer-helper.ps1
tests/: golden_corpus.py  provider_benchmark_samples.py
(+290 files in other folders)
