[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-fetch-skill"
version = "1.4.1"
description = "AI-friendly paper fetch tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.14,<5",
  "cachetools>=6,<8",
  "cloakbrowser>=0.3.28,<0.4",
  "filetype>=1.2,<2",
  "filelock>=3.20,<4",
  "imagesize>=1.4,<3",
  "idutils>=1.5,<2",
  "mcp>=1.27,<1.28",
  "platformdirs>=4,<5",
  "python-dotenv>=1.2,<2",
  "rapidfuzz>=3,<4",
  "trafilatura>=2.0,<3",
  "lxml>=6,<7",
  "playwright>=1.47,<2",
  "PyMuPDF>=1.27,<2",
  "pymupdf4llm>=1.27,<2",
  "pydantic>=2,<3",
  "urllib3>=2.2,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "jsonschema>=4,<5",
  "pytest>=8,<10",
  "PyYAML>=6,<7",
  "pytest-xdist>=3.6,<4",
  "ruff>=0.8,<1",
]

[project.scripts]
paper-fetch = "paper_fetch.cli:main"
paper-fetch-mcp = "paper_fetch.mcp.server:main"
paper-fetch-install-formula-tools = "paper_fetch.formula.install:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["paper_fetch*"]
exclude = ["paper_fetch_devtools*"]

[tool.setuptools.package-data]
"paper_fetch.resources.arxiv" = ["*.json"]
"paper_fetch.resources.formula" = ["*.json", "*.mjs"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = [
  "tests/unit",
  "tests/integration",
  "tests/devtools",
]
